# argus

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
atlas/: ANTIBOT.md  ARCHITECTURE.md  CONTRACTS.md  LADDER.md  PILLARS.md  SOURCE_CARD_SCHEMA.md
db/: asset_aliases.yaml  sources.yaml
scripts/: init_env.sh
sources/news/: EDGE_CASES.md  bls_releases.yaml  coindesk.yaml  cointelegraph.yaml  decrypt.yaml  ecb_press.yaml  fed_press.yaml  sec_8k.yaml  sec_press.yaml  theblock.yaml  us_treasury.yaml
src/argus/: cli.py
src/argus/antibot/: __init__.py  cadence.py  fingerprint_lab.py  proxy.py  rung.py
src/argus/cartographer/: __init__.py  capture.py  cartographer.py  classify.py  emit.py
src/argus/core/: __init__.py  browser.py  contracts.py  harvester.py  ladder.py  schedule.py  source_card.py
src/argus/core/stealth/: __init__.py  backends.py
src/argus/pillars/news/: __init__.py  dedup.py  harvesters.py  normalize.py  pipeline.py  score.py  tag.py
src/argus/sinks/: __init__.py  base.py  memory.py  nats.py  parquet.py  questdb.py
tests/: test_antibot.py  test_browser.py  test_cartographer.py  test_ladder.py  test_news_pillar.py  test_sinks.py  test_source_card.py
