[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argus"
version = "0.1.0"
description = "Browser-native universal market-data harvester"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44",
    "patchright>=1.44",
    "camoufox[geoip]>=0.4",
    "playwright-stealth>=1.0",
    "curl-cffi>=0.7",
    "pydantic>=2.7",
    "polars>=0.20",
    "pyarrow>=16.0",
    "psycopg[binary]>=3.1",          # QuestDB ILP via PG wire
    "nats-py>=2.6",
    "httpx>=0.27",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "rapidfuzz>=3.9",
    "structlog>=24.2",
    "typer>=0.12",
    "tenacity>=8.3",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "black>=24.4",
    "types-pyyaml",
    "types-beautifulsoup4",
]

[project.scripts]
argus = "argus.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/argus"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
